fix alignment of nav bar for RWD

--- a/css/top.css
+++ b/css/top.css
@@ -175,32 +175,30 @@ header.top div.topNav div.headerRight i:hover {
   }
 
   header.top div.topNav div.headerRight a {
-    padding: 5px;
     display: block;
     transition: 0.3s;
     text-decoration: none;
     color: white;
     font-size: 4.5vw;
     letter-spacing: 2px;
-    margin: 5vw 14vw 5vw 5vw;
+    margin: 5vw 5vw;
   }
   header.top div.topNav div.headerRight a:hover {
        background-color: grey;
 }
-
   .overlay a:hover, .overlay a:focus {
     color: white;
   }
 
   .overlay .closebtn {
     position: absolute;
-    top: 24px;
+    top: 20px;
     right: 34px;
   }
   header.top div.topNav div.navIcon i{
     position: absolute;
     top: 28px;
-    right: 22px;
+    right: 18px;
     cursor:pointer;
     color:white;
     font-size: 40px;
